Refactor HTML structure and content updates

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <title>Barbearia Cortezzia</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <!-- HERO --------------------------------------->
+    <!-- HERO -->
     <header class="hero fade-in">
         <h1>Barbearia Cortezzia</h1>
         <p class="subtitle">Excelência em cortes masculinos desde 2017 ✂️</p>
@@ -33,10 +32,10 @@
     </header>
 
 
-    <!-- PLANOS ------------------------------------->
+    <!-- PLANOS -->
     <section class="section fade-up">
-        <h2>Planos Cortezzia (Mensalidade)</h2>
-        <p class="muted">Assine e corte todos os dias de segunda a sábado.</p>
+        <h2>Planos Mensais</h2>
+        <p class="muted">Assista e corte todos os dias de segunda a sábado.</p>
 
         <div class="grid">
 
@@ -71,27 +70,50 @@
     </section>
 
 
-    <!-- SERVIÇOS ----------------------------------->
+    <!-- SERVIÇOS + PRODUTOS (lado a lado) -->
     <section class="section fade-up">
-        <h2>Serviços Avulsos</h2>
-        <p class="muted">Valores variam conforme estilo, técnica e materiais.</p>
+        <h2>Serviços & Produtos</h2>
 
-        <div class="grid">
+        <div class="dual-grid">
 
-            <div class="card"><h3>Corte</h3><p class="price">A partir de R$ 35</p></div>
-            <div class="card"><h3>Barba</h3><p class="price">A partir de R$ 35</p></div>
-            <div class="card"><h3>Corte Navalhado</h3><p class="price">A partir de R$ 40</p></div>
-            <div class="card"><h3>Sobrancelha</h3><p class="price">A partir de R$ 20</p></div>
-            <div class="card"><h3>Barboterapia</h3><p class="price">A partir de R$ 50</p></div>
-            <div class="card"><h3>Progressiva</h3><p class="price">A partir de R$ 120</p></div>
-            <div class="card"><h3>Luzes / Descoloração</h3><p class="price">A partir de R$ 100</p></div>
-            <div class="card"><h3>Pigmentação / Hidratação</h3><p class="price">A partir de R$ 30</p></div>
+            <!-- SERVIÇOS -->
+            <div>
+                <h3>Serviços Avulsos</h3>
+                <p class="muted">Valores variam conforme técnica e materiais.</p>
+
+                <div class="grid">
+
+                    <div class="card"><h3>Corte</h3><p class="price">A partir de R$ 35</p></div>
+                    <div class="card"><h3>Barba</h3><p class="price">A partir de R$ 35</p></div>
+                    <div class="card"><h3>Corte Navalhado</h3><p class="price">A partir de R$ 40</p></div>
+                    <div class="card"><h3>Sobrancelha</h3><p class="price">A partir de R$ 20</p></div>
+                    <div class="card"><h3>Barboterapia</h3><p class="price">A partir de R$ 50</p></div>
+                    <div class="card"><h3>Progressiva</h3><p class="price">A partir de R$ 120</p></div>
+                    <div class="card"><h3>Luzes / Descoloração</h3><p class="price">A partir de R$ 100</p></div>
+                    <div class="card"><h3>Pigmentação / Hidratação</h3><p class="price">A partir de R$ 30</p></div>
+
+                </div>
+            </div>
+
+            <!-- PRODUTOS -->
+            <div>
+                <h3>Produtos</h3>
+                <p class="muted">Linha profissional exclusiva.</p>
+
+                <div class="grid">
+                    <div class="card"><h3>Pomadas</h3><p class="price">A partir de R$ 35</p></div>
+                    <div class="card"><h3>Minoxidil</h3><p class="price">R$ 75</p></div>
+                    <div class="card"><h3>Fixador</h3><p class="price">R$ 50</p></div>
+                    <div class="card"><h3>Shampoo</h3><p class="price">R$ 50</p></div>
+                    <div class="card"><h3>Óleo para Barba</h3><p class="price">R$ 50</p></div>
+                </div>
+            </div>
 
         </div>
     </section>
 
 
-    <!-- ENDEREÇO ----------------------------------->
+    <!-- ENDEREÇO -->
     <section class="section fade-up">
         <h2>Localização</h2>
         <p class="muted">Rua Almirante Tamandaré, 281 – Lagoa Nova – Natal/RN</p>
@@ -105,7 +127,7 @@
     </section>
 
 
-    <!-- CONTATO ------------------------------------>
+    <!-- CONTATO -->
     <section class="section fade-up">
         <h2>Contato</h2>
 
@@ -123,15 +145,14 @@
     </section>
 
 
-    <!-- RODAPÉ ------------------------------------->
+    <!-- RODAPÉ -->
     <footer class="footer fade-in">
         <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
     </footer>
 
 
-    <!-- BOTÃO FLUTUANTE ----------------------------->
+    <!-- BOTÃO FLUTUANTE -->
     <a href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" class="whatsapp-float" target="_blank">💬</a>
-
 
     <script src="script.js"></script>
 </body>
