Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <a class="btn primary" href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" target="_blank">
                 Agendar pelo WhatsApp
             </a>
-
             <a class="btn secondary" href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank">
                 Agendar pelo AppBarber
             </a>
@@ -31,11 +30,10 @@
              alt="QR Code WhatsApp">
     </header>
 
-
     <!-- PLANOS -->
     <section class="section fade-up">
         <h2>Planos Mensais</h2>
-        <p class="muted">Assista e corte todos os dias de segunda a sábado.</p>
+        <p class="muted">Assine e corte todos os dias de segunda a sábado.</p>
 
         <div class="grid">
 
@@ -69,8 +67,7 @@
         </div>
     </section>
 
-
-    <!-- SERVIÇOS + PRODUTOS (lado a lado) -->
+    <!-- SERVIÇOS + PRODUTOS -->
     <section class="section fade-up">
         <h2>Serviços & Produtos</h2>
 
@@ -80,9 +77,7 @@
             <div>
                 <h3>Serviços Avulsos</h3>
                 <p class="muted">Valores variam conforme técnica e materiais.</p>
-
                 <div class="grid">
-
                     <div class="card"><h3>Corte</h3><p class="price">A partir de R$ 35</p></div>
                     <div class="card"><h3>Barba</h3><p class="price">A partir de R$ 35</p></div>
                     <div class="card"><h3>Corte Navalhado</h3><p class="price">A partir de R$ 40</p></div>
@@ -91,7 +86,6 @@
                     <div class="card"><h3>Progressiva</h3><p class="price">A partir de R$ 120</p></div>
                     <div class="card"><h3>Luzes / Descoloração</h3><p class="price">A partir de R$ 100</p></div>
                     <div class="card"><h3>Pigmentação / Hidratação</h3><p class="price">A partir de R$ 30</p></div>
-
                 </div>
             </div>
 
@@ -99,7 +93,6 @@
             <div>
                 <h3>Produtos</h3>
                 <p class="muted">Linha profissional exclusiva.</p>
-
                 <div class="grid">
                     <div class="card"><h3>Pomadas</h3><p class="price">A partir de R$ 35</p></div>
                     <div class="card"><h3>Minoxidil</h3><p class="price">R$ 75</p></div>
@@ -112,6 +105,22 @@
         </div>
     </section>
 
+    <!-- GALERIA INSTAGRAM -->
+    <section class="section fade-up">
+        <h2>Galeria</h2>
+        <p class="muted">Alguns trabalhos recentes — acompanhe também no Instagram</p>
+
+        <div class="gallery-grid">
+            <!-- substitua pelos links das imagens reais do Instagram -->
+            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto1" alt="Foto 1">
+            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto2" alt="Foto 2">
+            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto3" alt="Foto 3">
+            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto4" alt="Foto 4">
+            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto5" alt="Foto 5">
+        </div>
+
+        <a class="btn secondary" href="https://www.instagram.com/barbeariacortezzia" target="_blank">Ver no Instagram</a>
+    </section>
 
     <!-- ENDEREÇO -->
     <section class="section fade-up">
@@ -126,30 +135,25 @@
         </div>
     </section>
 
-
     <!-- CONTATO -->
     <section class="section fade-up">
         <h2>Contato</h2>
-
         <p class="muted">Horário: Seg–Sáb 09:00–19:00 • Domingo fechado</p>
 
         <div class="cta-wrap">
             <a class="btn primary" href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" target="_blank">
                 WhatsApp
             </a>
-
             <a class="btn secondary" href="https://www.instagram.com/barbeariacortezzia" target="_blank">
                 Instagram
             </a>
         </div>
     </section>
 
-
     <!-- RODAPÉ -->
     <footer class="footer fade-in">
         <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
     </footer>
-
 
     <!-- BOTÃO FLUTUANTE -->
     <a href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" class="whatsapp-float" target="_blank">💬</a>
