Fix HTML formatting and remove unnecessary characters

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
     <!-- HERO -->
-    <header class="hero fade-in">
+    <header class="hero">
         <h1>Barbearia Cortezzia</h1>
         <p class="subtitle">Excelência em cortes masculinos desde 2017 ✂️</p>
 
@@ -31,12 +30,11 @@
     </header>
 
     <!-- PLANOS -->
-    <section class="section fade-up">
+    <section class="section">
         <h2>Planos Mensais</h2>
         <p class="muted">Assine e corte todos os dias de segunda a sábado.</p>
 
         <div class="grid">
-
             <div class="card">
                 <h3>Corte Plus</h3>
                 <p class="price">R$ 84,90 / mês</p>
@@ -63,16 +61,14 @@
                     <li>Segunda a sábado</li>
                 </ul>
             </div>
-
         </div>
     </section>
 
     <!-- SERVIÇOS + PRODUTOS -->
-    <section class="section fade-up">
+    <section class="section">
         <h2>Serviços & Produtos</h2>
 
         <div class="dual-grid">
-
             <!-- SERVIÇOS -->
             <div>
                 <h3>Serviços Avulsos</h3>
@@ -101,17 +97,15 @@
                     <div class="card"><h3>Óleo para Barba</h3><p class="price">R$ 50</p></div>
                 </div>
             </div>
-
         </div>
     </section>
 
-    <!-- GALERIA INSTAGRAM -->
-    <section class="section fade-up">
+    <!-- GALERIA -->
+    <section class="section">
         <h2>Galeria</h2>
         <p class="muted">Alguns trabalhos recentes — acompanhe também no Instagram</p>
 
         <div class="gallery-grid">
-            <!-- substitua pelos links das imagens reais do Instagram -->
             <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto1" alt="Foto 1">
             <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto2" alt="Foto 2">
             <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto3" alt="Foto 3">
@@ -123,20 +117,17 @@
     </section>
 
     <!-- ENDEREÇO -->
-    <section class="section fade-up">
+    <section class="section">
         <h2>Localização</h2>
         <p class="muted">Rua Almirante Tamandaré, 281 – Lagoa Nova – Natal/RN</p>
 
         <div class="map-wrap">
-            <iframe 
-                src="https://www.google.com/maps?q=Rua%20Almirante%20Tamandaré%20281,%20Lagoa%20Nova%20Natal&output=embed"
-                loading="lazy">
-            </iframe>
+            <iframe src="https://www.google.com/maps?q=Rua%20Almirante%20Tamandaré%20281,%20Lagoa%20Nova%20Natal&output=embed" loading="lazy"></iframe>
         </div>
     </section>
 
     <!-- CONTATO -->
-    <section class="section fade-up">
+    <section class="section">
         <h2>Contato</h2>
         <p class="muted">Horário: Seg–Sáb 09:00–19:00 • Domingo fechado</p>
 
@@ -151,13 +142,12 @@
     </section>
 
     <!-- RODAPÉ -->
-    <footer class="footer fade-in">
+    <footer class="footer">
         <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
     </footer>
 
     <!-- BOTÃO FLUTUANTE -->
     <a href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" class="whatsapp-float" target="_blank">💬</a>
 
-    <script src="script.js"></script>
 </body>
 </html>
