--- a/index.html
+++ b/index.html
@@ -1,153 +1,154 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Cortezzia</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Barbearia Cortezzia</title>
+<style>
+/* RESET */
+* { margin:0; padding:0; box-sizing:border-box; }
+body { font-family: Arial, sans-serif; background:#000; color:#FFD700; line-height:1.5; }
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+/* LINKS E BOTÕES */
+a { text-decoration:none; color:#FFD700; }
+.btn {
+  display:inline-block;
+  padding:12px 20px;
+  margin:5px;
+  border-radius:8px;
+  font-weight:bold;
+  transition:0.3s;
+  cursor:pointer;
+}
+.primary { background:#FFD700; color:#000; }
+.primary:hover { background:#e6c200; }
+.secondary { background:#222; border:2px solid #FFD700; color:#FFD700; }
+.secondary:hover { background:#FFD700; color:#000; }
+
+/* HERO */
+.hero {
+  text-align:center;
+  padding:40px 20px;
+  background:#111;
+}
+.hero h1 { font-size:2.5rem; margin-bottom:10px; }
+.hero p { opacity:0.8; margin-bottom:20px; }
+.qr-code { width:200px; margin-top:20px; border-radius:10px; }
+
+/* SECTIONS */
+.section { padding:40px 20px; text-align:center; }
+.muted { opacity:0.7; margin-bottom:20px; }
+
+/* GRID */
+.grid { display:grid; gap:20px; margin-top:25px; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); }
+
+/* DUAL GRID */
+.dual-grid { display:grid; grid-template-columns:1fr 1fr; gap:30px; margin-top:30px; }
+@media(max-width:900px){ .dual-grid{ grid-template-columns:1fr; } }
+
+/* CARDS */
+.card {
+  background:#111;
+  border:1px solid #FFD700;
+  border-radius:10px;
+  padding:20px;
+  transition: transform 0.3s;
+}
+.card:hover { transform:translateY(-5px); }
+.card.highlight { border:2px solid #FFD700; background:#222; }
+.card h3 { margin-bottom:10px; }
+.price { font-weight:bold; color:#FFD700; margin-bottom:10px; }
+
+/* GALERIA */
+.gallery-grid { display:grid; gap:15px; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); margin-top:20px; }
+.gallery-grid img { width:100%; border-radius:10px; border:2px solid #FFD700; transition: transform 0.3s; }
+.gallery-grid img:hover { transform: scale(1.05); }
+
+/* MAPA */
+.map-wrap iframe { width:100%; height:300px; border:none; border-radius:10px; }
+
+/* RODAPÉ */
+.footer { text-align:center; padding:20px; opacity:0.7; background:#111; }
+
+/* WHATSAPP FLUTUANTE */
+.whatsapp-float {
+  position:fixed;
+  bottom:25px;
+  right:25px;
+  background:#FFD700;
+  color:#000;
+  font-size:26px;
+  padding:15px;
+  border-radius:50%;
+  text-align:center;
+  box-shadow:0 0 12px #FFD700;
+}
+</style>
 </head>
 <body>
 
-    <!-- HERO -->
-    <header class="hero">
-        <h1>Barbearia Cortezzia</h1>
-        <p class="subtitle">Excelência em cortes masculinos desde 2017 ✂️</p>
+<header class="hero">
+  <h1>Barbearia Cortezzia</h1>
+  <p class="subtitle">Excelência em cortes masculinos desde 2017 ✂️</p>
+  <a class="btn primary" href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" target="_blank">Agendar WhatsApp</a>
+  <a class="btn secondary" href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank">Agendar AppBarber</a>
+  <br>
+  <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" alt="QR Code WhatsApp">
+</header>
 
-        <div class="cta-wrap">
-            <a class="btn primary" href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" target="_blank">
-                Agendar pelo WhatsApp
-            </a>
-            <a class="btn secondary" href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank">
-                Agendar pelo AppBarber
-            </a>
-        </div>
+<section class="section">
+  <h2>Planos Mensais</h2>
+  <p class="muted">Assine e corte todos os dias de segunda a sábado</p>
+  <div class="grid">
+    <div class="card"><h3>Corte Plus</h3><p class="price">R$ 84,90/mês</p><ul><li>Cortes ilimitados</li><li>Seg-Sáb</li></ul></div>
+    <div class="card highlight"><h3>Corte + Barba Plus</h3><p class="price">R$ 164,90/mês</p><ul><li>Corte ilimitado</li><li>Barba ilimitada</li></ul></div>
+    <div class="card"><h3>Barba Plus</h3><p class="price">R$ 99,90/mês</p><ul><li>Barba ilimitada</li><li>Seg-Sáb</li></ul></div>
+  </div>
+</section>
 
-        <img class="qr-code" 
-             src="https://api.qrserver.com/v1/create-qr-code/?size=240x240&data=https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" 
-             alt="QR Code WhatsApp">
-    </header>
+<section class="section">
+  <h2>Serviços & Produtos</h2>
+  <div class="dual-grid">
+    <div>
+      <h3>Serviços</h3>
+      <div class="grid">
+        <div class="card"><h3>Corte</h3><p class="price">A partir de R$ 35</p></div>
+        <div class="card"><h3>Barba</h3><p class="price">A partir de R$ 35</p></div>
+        <div class="card"><h3>Corte Navalhado</h3><p class="price">A partir de R$ 40</p></div>
+        <div class="card"><h3>Sobrancelha</h3><p class="price">A partir de R$ 20</p></div>
+      </div>
+    </div>
+    <div>
+      <h3>Produtos</h3>
+      <div class="grid">
+        <div class="card"><h3>Pomadas</h3><p class="price">A partir de R$ 35</p></div>
+        <div class="card"><h3>Minoxidil</h3><p class="price">R$ 75</p></div>
+        <div class="card"><h3>Fixador</h3><p class="price">R$ 50</p></div>
+        <div class="card"><h3>Shampoo</h3><p class="price">R$ 50</p></div>
+        <div class="card"><h3>Óleo para Barba</h3><p class="price">R$ 50</p></div>
+      </div>
+    </div>
+  </div>
+</section>
 
-    <!-- PLANOS -->
-    <section class="section">
-        <h2>Planos Mensais</h2>
-        <p class="muted">Assine e corte todos os dias de segunda a sábado.</p>
+<section class="section">
+  <h2>Localização</h2>
+  <p class="muted">Rua Almirante Tamandaré, 281 – Lagoa Nova – Natal/RN</p>
+  <div class="map-wrap">
+    <iframe src="https://www.google.com/maps?q=Rua%20Almirante%20Tamandaré%20281,%20Lagoa%20Nova%20Natal&output=embed"></iframe>
+  </div>
+</section>
 
-        <div class="grid">
-            <div class="card">
-                <h3>Corte Plus</h3>
-                <p class="price">R$ 84,90 / mês</p>
-                <ul>
-                    <li>Cortes ilimitados</li>
-                    <li>Segunda a sábado</li>
-                </ul>
-            </div>
+<section class="section">
+  <h2>Contato</h2>
+  <p class="muted">Seg-Sáb: 09:00–19:00 | Domingo fechado</p>
+  <a class="btn primary" href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" target="_blank">WhatsApp</a>
+  <a class="btn secondary" href="https://www.instagram.com/barbeariacortezzia" target="_blank">Instagram</a>
+</section>
 
-            <div class="card highlight">
-                <h3>Corte + Barba Plus</h3>
-                <p class="price">R$ 164,90 / mês</p>
-                <ul>
-                    <li>Corte ilimitado</li>
-                    <li>Barba ilimitada</li>
-                </ul>
-            </div>
+<footer class="footer">© 2025 Barbearia Cortezzia — Todos os direitos reservados</footer>
 
-            <div class="card">
-                <h3>Barba Plus</h3>
-                <p class="price">R$ 99,90 / mês</p>
-                <ul>
-                    <li>Barba ilimitada</li>
-                    <li>Segunda a sábado</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- SERVIÇOS + PRODUTOS -->
-    <section class="section">
-        <h2>Serviços & Produtos</h2>
-
-        <div class="dual-grid">
-            <!-- SERVIÇOS -->
-            <div>
-                <h3>Serviços Avulsos</h3>
-                <p class="muted">Valores variam conforme técnica e materiais.</p>
-                <div class="grid">
-                    <div class="card"><h3>Corte</h3><p class="price">A partir de R$ 35</p></div>
-                    <div class="card"><h3>Barba</h3><p class="price">A partir de R$ 35</p></div>
-                    <div class="card"><h3>Corte Navalhado</h3><p class="price">A partir de R$ 40</p></div>
-                    <div class="card"><h3>Sobrancelha</h3><p class="price">A partir de R$ 20</p></div>
-                    <div class="card"><h3>Barboterapia</h3><p class="price">A partir de R$ 50</p></div>
-                    <div class="card"><h3>Progressiva</h3><p class="price">A partir de R$ 120</p></div>
-                    <div class="card"><h3>Luzes / Descoloração</h3><p class="price">A partir de R$ 100</p></div>
-                    <div class="card"><h3>Pigmentação / Hidratação</h3><p class="price">A partir de R$ 30</p></div>
-                </div>
-            </div>
-
-            <!-- PRODUTOS -->
-            <div>
-                <h3>Produtos</h3>
-                <p class="muted">Linha profissional exclusiva.</p>
-                <div class="grid">
-                    <div class="card"><h3>Pomadas</h3><p class="price">A partir de R$ 35</p></div>
-                    <div class="card"><h3>Minoxidil</h3><p class="price">R$ 75</p></div>
-                    <div class="card"><h3>Fixador</h3><p class="price">R$ 50</p></div>
-                    <div class="card"><h3>Shampoo</h3><p class="price">R$ 50</p></div>
-                    <div class="card"><h3>Óleo para Barba</h3><p class="price">R$ 50</p></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- GALERIA -->
-    <section class="section">
-        <h2>Galeria</h2>
-        <p class="muted">Alguns trabalhos recentes — acompanhe também no Instagram</p>
-
-        <div class="gallery-grid">
-            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto1" alt="Foto 1">
-            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto2" alt="Foto 2">
-            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto3" alt="Foto 3">
-            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto4" alt="Foto 4">
-            <img src="https://via.placeholder.com/200x200/FFD700/000000?text=Foto5" alt="Foto 5">
-        </div>
-
-        <a class="btn secondary" href="https://www.instagram.com/barbeariacortezzia" target="_blank">Ver no Instagram</a>
-    </section>
-
-    <!-- ENDEREÇO -->
-    <section class="section">
-        <h2>Localização</h2>
-        <p class="muted">Rua Almirante Tamandaré, 281 – Lagoa Nova – Natal/RN</p>
-
-        <div class="map-wrap">
-            <iframe src="https://www.google.com/maps?q=Rua%20Almirante%20Tamandaré%20281,%20Lagoa%20Nova%20Natal&output=embed" loading="lazy"></iframe>
-        </div>
-    </section>
-
-    <!-- CONTATO -->
-    <section class="section">
-        <h2>Contato</h2>
-        <p class="muted">Horário: Seg–Sáb 09:00–19:00 • Domingo fechado</p>
-
-        <div class="cta-wrap">
-            <a class="btn primary" href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" target="_blank">
-                WhatsApp
-            </a>
-            <a class="btn secondary" href="https://www.instagram.com/barbeariacortezzia" target="_blank">
-                Instagram
-            </a>
-        </div>
-    </section>
-
-    <!-- RODAPÉ -->
-    <footer class="footer">
-        <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
-    </footer>
-
-    <!-- BOTÃO FLUTUANTE -->
-    <a href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" class="whatsapp-float" target="_blank">💬</a>
+<a href="https://wa.me/5584981747266?text=Olá,+vim+pelo+instagram" class="whatsapp-float" target="_blank">💬</a>
 
 </body>
 </html>
